Update index.html content and add stylesheet link

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>My GitHub Website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>My GitHub Pages site is working.</p>
+    <h1>Hello, I'm Calen Flanagan Randall!</h1>
+    <p>Welcome to my website!.</p>
   </body>
 </html>
