--- a/index.html
+++ b/index.html
@@ -9,3 +9,100 @@
     <p>Welcome to my website!.</p>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Website</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+    }
+
+    /* Button styling */
+    .toggle-buttons {
+      margin-bottom: 20px;
+    }
+
+    .toggle-buttons button {
+      padding: 10px 16px;
+      margin-right: 8px;
+      border: none;
+      background-color: #e0e0e0;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    .toggle-buttons button.active {
+      background-color: #333;
+      color: white;
+    }
+
+    /* Section styling */
+    .section {
+      display: none;
+      margin-top: 20px;
+    }
+
+    .section.active {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>My Website</h1>
+
+  <!-- Toggle Buttons -->
+  <div class="toggle-buttons">
+    <button onclick="showSection('about')" class="active">About Me</button>
+    <button onclick="showSection('research')">Research</button>
+    <button onclick="showSection('figures')">Figures</button>
+    <button onclick="showSection('cv')">CV</button>
+  </div>
+
+  <!-- Sections -->
+  <div id="about" class="section active">
+    <h2>About Me</h2>
+    <p>This is information about me.</p>
+  </div>
+
+  <div id="research" class="section">
+    <h2>Research</h2>
+    <p>Details about my research go here.</p>
+  </div>
+
+  <div id="figures" class="section">
+    <h2>Figures</h2>
+    <p>Figures, images, or charts can go here.</p>
+  </div>
+
+  <div id="cv" class="section">
+    <h2>CV</h2>
+    <p>You can link or embed your CV here.</p>
+  </div>
+
+  <!-- JavaScript -->
+  <script>
+    function showSection(sectionId) {
+      // Hide all sections
+      const sections = document.querySelectorAll('.section');
+      sections.forEach(section => section.classList.remove('active'));
+
+      // Remove active state from all buttons
+      const buttons = document.querySelectorAll('.toggle-buttons button');
+      buttons.forEach(button => button.classList.remove('active'));
+
+      // Show selected section
+      document.getElementById(sectionId).classList.add('active');
+
+      // Activate clicked button
+      event.target.classList.add('active');
+    }
+  </script>
+
+</body>
+</html>
