Modify title and fix duplicate welcome message
Updated the title and corrected duplicate content.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My GitHub Website</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Hello, I'm Calen Flanagan Randall!</h1>
-    <p>Welcome to my website!.</p>
+    <p>Welcome to my website!</p>
   </body>
 </html>
 
@@ -14,8 +13,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Website</title>
-
+  <title>Calen Flanagan Randall</title>
+  <h1>Hello, I'm Calen Flanagan Randall!</h1>
+  <p>Welcome to my website!</p>
   <style>
     body {
       font-family: Arial, sans-serif;
