Revise content in About and Research sections
Updated personal and research information in the About and Research sections.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
   <!-- Sections -->
   <div id="about" class="section active">
     <h2>About Me</h2>
-    <p>This is information about me.</p>
+    <p>I am a fourth year graduate student studying Atmospheric Science at the Univeristy of California, Davis. My research focused on climate extremes, specifically heatwaves.</p>
   </div>
 
   <div id="research" class="section">
     <h2>Research</h2>
-    <p>Details about my research go here.</p>
+    <p>My research is split into three main topics, statistical evaluation of heatwaves across climate products, evaluating heatwave statistics across various oceanic modes of variability, and quantifying heatwave drivers.</p>
+    </p>Prior to UC Davis I worked on wildfires in western Washington and Oregon and studied the relationship between northeast Pacific SSTs and Pacific Northwest temperatures.</p>
   </div>
 
   <div id="figures" class="section">
