Fix typo in About Me section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- Sections -->
   <div id="about" class="section active">
     <h2>About Me</h2>
-    <p>I am a fourth year graduate student studying Atmospheric Science at the Univeristy of California, Davis. My research focused on climate extremes, specifically heatwaves.</p>
+    <p>I am a fourth year graduate student studying Atmospheric Science at the Univeristy of California, Davis. My research focuses on climate extremes, specifically heatwaves.</p>
   </div>
 
   <div id="research" class="section">
