Add 'Outside of Work' section to index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <button onclick="showSection('about')" class="active">About Me</button>
     <button onclick="showSection('research')">Research</button>
     <button onclick="showSection('figures')">Figures</button>
+    <button onclick="showSection('outside of work')">Outside of Work</button>
     <button onclick="showSection('cv')">CV</button>
   </div>
 
@@ -70,6 +71,11 @@
     <p>Figures, images, or charts can go here.</p>
   </div>
 
+  <div id="outside of work" class="section">
+    <h2>Outside of Work</h2>
+    <p>Birding, Maps, Hockey, and More.</p>
+  </div>
+  
   <div id="cv" class="section">
     <h2>CV</h2>
     <p>You can link or embed your CV here.</p>
