--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>Calen Flanagan Randall</title>
   <h1>Hello, I'm Calen Flanagan Randall!</h1>
-  <p>Welcome to my website!</p>
+  <p>Connect with me:</p>
+  <a href="https://www.linkedin.com/in/calen-randall-4a6a5a121/" target="_blank">
+  <i class="fa-brands fa-linkedin" style="font-size: 28px; color: #0a66c2;"></i>
+</a>
   <style>
     body {
       font-family: Arial, sans-serif;
