Add publications and presentations sections to index.html
Added a new section for publications and presentations.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
   <div class="toggle-buttons">
     <button onclick="showSection('about')" class="active">About Me</button>
     <button onclick="showSection('research')">Research</button>
-    <button onclick="showSection('figures')">Figures</button>
+    <button onclick="showSection('publications')">Publications</button>
+    <button onclick="showSection('figures')">Climate Figures</button>
     <button onclick="showSection('outside of work')">Outside of Work</button>
     <button onclick="showSection('cv')">CV</button>
   </div>
@@ -68,6 +69,16 @@
     <h2>Research</h2>
     <p>My research is split into three main topics, statistical evaluation of heatwaves across climate products, evaluating heatwave statistics across various oceanic modes of variability, and quantifying heatwave drivers.</p>
     </p>Prior to UC Davis I worked on wildfires in western Washington and Oregon and studied the relationship between northeast Pacific SSTs and Pacific Northwest temperatures.</p>
+  </div>
+
+    <div id="publications" class="section">
+    <h2>Publications</h2>
+    <p>List</p>
+    <h2>Presentations</h2>
+    <p>Evaluating Climate Data Products Across Heatwave Related Metrics, AGU25</p>
+      <p>Heatwaves, A Hot Topic: An Analysis of the Relationship Between Oceanic Modes of Variability and the Frequency and Characteristics of Heatwaves in the Continental USA, AGU24</p>
+      <p>Heatwaves a Hot Topic: How Well Do Climate Models Represent Heatwaves?, Graduate Climate Conference 2024</p>
+      <p>Heatwaves, a Hot Topic: A Regional Analysis of Their Metrics, Drivers, and Homogeneity, Graduate Climate Conference 2023</p>
   </div>
 
   <div id="figures" class="section">
