Add Google Scholar link to index.html
Added a link to Google Scholar profile.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <a href="https://www.linkedin.com/in/calen-randall-4a6a5a121/" target="_blank">
   <i class="fa-brands fa-linkedin" style="font-size: 28px; color: #0a66c2;"></i>
 </a>
+  <a href="https://scholar.google.com/citations?user=Tl04K30AAAAJ&hl=en" target="_blank">
+  Google Scholar
+  </a>
   <style>
     body {
       font-family: Arial, sans-serif;
