Add presentation title to publications section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <h2>Publications</h2>
     <p>List</p>
     <h2>Presentations</h2>
+    <p>Evaluating Climate Products Across Heatwave Related Metrics, AMS26</p>
     <p>Evaluating Climate Data Products Across Heatwave Related Metrics, AGU25</p>
       <p>Heatwaves, A Hot Topic: An Analysis of the Relationship Between Oceanic Modes of Variability and the Frequency and Characteristics of Heatwaves in the Continental USA, AGU24</p>
       <p>Heatwaves a Hot Topic: How Well Do Climate Models Represent Heatwaves?, Graduate Climate Conference 2024</p>
