--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +9,14 @@
   <a href="https://www.linkedin.com/in/calen-randall-4a6a5a121/" target="_blank">
   <i class="fa-brands fa-linkedin" style="font-size: 28px; color: #0a66c2;"></i>
 </a>
-  <a href="https://scholar.google.com/citations?user=Tl04K30AAAAJ&hl=en" target="_blank">
-  Google Scholar
-  </a>
+<a href="https://scholar.google.com/citations?user=Tl04K30AAAAJ&hl=en" target="_blank">
+  <img src="https://www.gstatic.com/images/branding/product/1x/google_g_logo_color_92x30dp.png"
+       alt="Google Scholar"
+       style="height:32px;">
+</a>
+
+
+  
   <style>
     body {
       font-family: Arial, sans-serif;
