Revise introduction and remove figures section
Updated personal introduction and removed 'Figures' section.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>Calen Flanagan Randall</title>
-  <h1>Hello, I'm Calen Flanagan Randall!</h1>
+  <h1>Calen Flanagan Randall</h1>
   <p>Connect with me:</p>
   <a href="https://www.linkedin.com/in/calen-randall-4a6a5a121/" target="_blank">
   <i class="fa-brands fa-linkedin" style="font-size: 28px; color: #0a66c2;"></i>
@@ -61,7 +61,6 @@
     <button onclick="showSection('about')" class="active">About Me</button>
     <button onclick="showSection('research')">Research</button>
     <button onclick="showSection('publications')">Publications</button>
-    <button onclick="showSection('figures')">Climate Figures</button>
     <button onclick="showSection('outside of work')">Outside of Work</button>
     <button onclick="showSection('cv')">CV</button>
   </div>
@@ -69,7 +68,7 @@
   <!-- Sections -->
   <div id="about" class="section active">
     <h2>About Me</h2>
-    <p>I am a fourth year graduate student studying Atmospheric Science at the Univeristy of California, Davis. My research focuses on climate extremes, specifically heatwaves.</p>
+    <p>I am a fourth year PhD candidate studying Atmospheric Science at the Univeristy of California, Davis. My research focuses on climate extremes, specifically heatwaves.</p>
   </div>
 
   <div id="research" class="section">
@@ -87,11 +86,6 @@
       <p>Heatwaves, A Hot Topic: An Analysis of the Relationship Between Oceanic Modes of Variability and the Frequency and Characteristics of Heatwaves in the Continental USA, AGU24</p>
       <p>Heatwaves a Hot Topic: How Well Do Climate Models Represent Heatwaves?, Graduate Climate Conference 2024</p>
       <p>Heatwaves, a Hot Topic: A Regional Analysis of Their Metrics, Drivers, and Homogeneity, Graduate Climate Conference 2023</p>
-  </div>
-
-  <div id="figures" class="section">
-    <h2>Figures</h2>
-    <p>Figures, images, or charts can go here.</p>
   </div>
 
   <div id="outside of work" class="section">
