--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <div id="outside of work" class="section">
     <h2>Outside of Work</h2>
-    <p>Birding, Maps, Hockey, and More.</p>
+    <p>A passion for birding, maps, and statistics led me to a career in atmospheric science.</p>
   </div>
   
   <div id="cv" class="section">
