Update Google Scholar logo link in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <i class="fa-brands fa-linkedin" style="font-size: 28px; color: #0a66c2;"></i>
 </a>
 <a href="https://scholar.google.com/citations?user=Tl04K30AAAAJ&hl=en" target="_blank">
-  <img src="https://commons.wikimedia.org/wiki/File:Google_%22G%22_logo.svg"
+  <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Google_Scholar_logo.svg"
        alt="Google Scholar"
        style="height:32px;">
 </a>
