Fix HTML structure in research section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <h2>Research</h2>
     <p>My research is split into three main topics, statistical evaluation of heatwaves across climate products, evaluating heatwave statistics across various oceanic modes of variability, and quantifying heatwave drivers.</p>
     </p>Prior to UC Davis I worked on wildfires in western Washington and Oregon and studied the relationship between northeast Pacific SSTs and Pacific Northwest temperatures.</p>
+  </p>Global distribution of heatwaves</p>
   </div>
 
     <div id="publications" class="section">
